# =============================================================================
# PROJECT
# =============================================================================
[project]
name = "poe_overlay"
description = "poe overlay"
readme = "README.md"
requires-python = ">=3.12"
version = "1.6.0"

# =============================================================================
# PROJECT DEPENDENCIES
# =============================================================================
dependencies = [
    "bettercam>=1.0.0",
    "keyboard>=0.13.5",
    "mouse>=0.7.1",
    "mss>=10.2.0",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.1",
    "pyside6>=6.11.1",
    "pywin32>=311",
    "toml>=0.10.2",
]
# =============================================================================
# PROJECT SCRIPTS
# ============================================================================
[project.scripts]
poeoverlay = "poe_overlay.app_poe_overlay:entrypoint"

#=============================================================================
# RUFF
# =============================================================================
[tool.ruff]
line-length = 200
ignore = ["E722"] # bare except
# =============================================================================
# MYPY
# =============================================================================
[tool.mypy]
python_version = '3.10'
warn_return_any = true
warn_unused_configs = true
exclude = "scratch/*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pyspark.*", "schedule"]
ignore_missing_imports = true
# =============================================================================
# PROJECT BUILD
# =============================================================================
[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
# =============================================================================
# PYLINT
# =============================================================================
[tool.pylint]
disable = [
    "W0621", # Redefining name from outer scope  
#     "C0123", # Use of `lambda` detected (consider using `def`)  
#     "C0301", # Line too long  
    "C0103", # Invalid naming convention  
    "I1101", # Module import not recognized (usually due to dynamic import or missing stubs)  
#     "R0902", # Too many instance attributes  
#     "R0904", # Too many public methods  
#     "R0914", # Too many local variables
#     "W0201", # Attribute defined outside __init__  
#     "W0106", # Expression not assigned (possibly useless code)  
    "W0702", # No exception type(s) specified, bare except (try, except block) without specification 
#     "W0719", # Raising too general exception (raise Exception) (not allowed in Python 3)  

#     # modules are not installed
    "E0611", # No name in module (import error)
    "E0401", # Unable to import module  
    "W0102"
]
[tool.pylint.main]
ignore = ["scratch/*"]
max-line-length = 200

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"

# =============================================================================
# PYLANCE
# =============================================================================
[tool.pyright]
reportMissingModuleSource = false



# [tool.semantic_release.commit_parser_options]
# allowed_tags = [
#     "build",
#     "chore",
#     "ci",
#     "docs",
#     "feat",
#     "fix",
#     "perf",
#     "style",
#     "refactor",
#     "test",
#     "ci",
#     "powerbi",
# ]